--- a/projet/mask.html
+++ b/projet/mask.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/main.css" />
         <link rel="stylesheet" href="/support/correctif.css" />
 		<link rel="stylesheet" href="/externe/mask.css" />
-        <title>Mask</title>
+        <title>Masque de champ</title>
     </head>
     <body class="light-background">
         <div class="container-fluid">
