--- a/projet/check.html
+++ b/projet/check.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/main.css" />
         <link rel="stylesheet" href="/support/correctif.css" />
 		<link rel="stylesheet" href="/externe/check.css" />
-        <title>Check</title>
+        <title>Radio button et checkbox</title>
     </head>
     <body class="light-background">
         <div class="container-fluid">
@@ -20,7 +20,7 @@
                     <div class="col-sm-offset-2 col-sm-8 readme">
 						<div class="callout">
 							<h1 class="h4">Check</h1>
-							Ce script CSS permet de styliser les checkbox et radio button.
+							Ces script CSS permet de styliser les checkbox et radio button.
 						</div>
 						<div class="code">
 							<div class="h5">check.css <a href="/externe/check.css" title="downoald" target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
