--- a/projet/check.html
+++ b/projet/check.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-sm-offset-2 col-sm-8 readme">
 						<div class="callout">
-							<h1 class="h4">Check</h1>
+							<h1 class="h4">Radio button et checkbox</h1>
 							Ces script CSS permet de styliser les checkbox et radio button.
 						</div>
 						<div class="code">
