--- a/projet/generator.html
+++ b/projet/generator.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/main.css" />
         <link rel="stylesheet" href="/support/correctif.css" />
-        <title>Java Validator</title>
+        <title>Générateur de fichier</title>
     </head>
     <body class="light-background">
         <div class="container-fluid">
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="col-sm-offset-2 col-sm-8 readme">
 						<div class="callout">
-							<h1 class="h4">File generator</h1>
+							<h1 class="h4">Générateur de fichier</h1>
 							2 générateurs de fichiers pssédant chacune leur interface sont disponibles sur mon github.<br><br>
 							Le <a href="https://github.com/nicolas-amiot/simple-generator" target="_blank">générateur simple</a> permet de générer autant de fois le contenu du fichier source.
 							Pour celà, il suffit de créer un fichier dans resources/models et de préciser les variables avec @{FIELD}, @{FIELD_2}, @{FIELD_3}, etc.
