--- a/projet/mask.html
+++ b/projet/mask.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-sm-offset-2 col-sm-8 readme">
 						<div class="callout">
-							<h1 class="h4">Mask</h1>
+							<h1 class="h4">Masque de champ</h1>
 							Cette fonction permet d'ajouter un masque à un champ de saisie.<br><br>
 							Le masque peut être configuré depuis 3 attributs data :<br>
 							<li>Le data-mask précise le masque dont les étoiles sont les caractères saisissables et les autres les caractères fixes.</li>
