--- a/projet/check.html
+++ b/projet/check.html
@@ -20,7 +20,7 @@
                     <div class="col-sm-offset-2 col-sm-8 readme">
 						<div class="callout">
 							<h1 class="h4">Radio button et checkbox</h1>
-							Ces script CSS permet de styliser les checkbox et radio button.
+							Ces scripts CSS permettent de styliser les checkbox et radio button.
 						</div>
 						<div class="code">
 							<div class="h5">check.css <a href="/externe/check.css" title="downoald" target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
