--- a/projet/datalist.html
+++ b/projet/datalist.html
@@ -20,7 +20,7 @@
 						<div class="callout">
 							<h1 class="h4">Datalist</h1>
 							Cette fonction permet d'ajouter une autocomplétion customisable à un champ de saisie.<br><br>
-							La liste peut être configurér depuis 2 attributs data :<br>
+							La liste peut être configurée depuis 2 attributs data :<br>
 							<li>Le data-match précise si les choix affichés doivent strictement commencer par la valeur saisie ou si on laisse le comportement par défaut du navigateur.</li>
 							<li>Le data-character permet d'afficher la liste qu'au bout d'un certain nombre de caractère saisie (par défaut 1).</li>
 						</div>
