--- a/projet/java.html
+++ b/projet/java.html
@@ -24,16 +24,16 @@
 						<div class="callout">
 							<h1 class="h4"><a href="https://github.com/nicolas-amiot/validator" target="_blank">Java EE validateur</a></h1>
 							Le but de ce projet était de valider les champs lors de la perte de focus et lors de la soumission du formulaire au même endroit et sans rechargement de la page.<br>
-							Celà permet ainsi de ne pas dupliquer le code dans plusieurs langages mais solicite plus souvent le serveur.
+							Cela permet ainsi de ne pas dupliquer le code dans plusieurs langages mais solicite plus souvent le serveur.
 						</div>
 						<div class="callout">
 							<h1 class="h4"><a href="https://github.com/nicolas-amiot/annotation-validator" target="_blank">Validation par annotation</a></h1>
-							Ce projet reprend le principe de l'API Hibernate Validator implémentant Javax Validation pour en faire une version maison.
+							Ce projet reprend le principe de l'API Hibernate Validator pour en faire une version maison.
 						</div>
 						<div class="callout">
 							<h1 class="h4"><a href="https://github.com/nicolas-amiot/csv" target="_blank">Téléchargement d'un CSV</a></h1>
 							Permet de faciliter la création d'un fichier csv ou d'un zip contenant plusieurs csv.<br>
-							Il existe une implémentation pour sauvegarder le fichier en local et un autre pour les servlets pour mettre à l'utilisateur de le télécharger.<br>
+							Il existe une implémentation pour sauvegarder le fichier en local et un autre pour les servlets pour permettre à l'utilisateur de le télécharger.<br>
 							Le fichier est enregistré au fur et à mesure pour éviter le out of memory dans le cas de fichier volumineux.<br>
 							Pour la version servlet l'utilisateur se vera proposer le fichier dès l'écriture des premières lignes mais devra attendre la fin du téléchargement pour l'ouvrir. Il pourra être averti lorsque celui-ci est terminé.
 						</div>
