--- a/projet/treeview.html
+++ b/projet/treeview.html
@@ -22,7 +22,7 @@
 							<h1 class="h4">TreeView</h1>
 							Cette fonction permet de construire un TreeView à partir d'une liste.<br><br>
 							Le treeview peut être configuré à partir de 3 paramètres :<br>
-							<li>La valeur name permet de spécifier le nom des input du formulaire (par défaut treeview)</li>
+							<li>La valeur name permet de spécifier le nom des inputs du formulaire (par défaut treeview)</li>
 							<li>Si présicer le type permet de transformer les élements du plus bas niveau en checkbox, radio ou link. Sinon ce sera du simple texte.</li>
 							<li>Si la valeur childNumber est à true, le nombre d'élément enfant sera affiché à l'élément parent.</li>
 						</div>
