--- a/a-propos.html
+++ b/a-propos.html
@@ -20,7 +20,7 @@
                     <div class="col-sm-10 col-sm-offset-1">
                         <h1 class="text-center h2">A propos</h1>
                         <h2 class="h3">Détails du site</h2>
-                        Ce site à été réalisé en PHP et à partir du framework <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>.<br />
+                        Ce site statique à été réalisé à partir du framework <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a> et <a href="https://jquery.com/" target="_blank">jQuery</a>.<br />
                         Le site est hébergé grâce à <a href="https://pages.github.com/" target="_blank">Github Pages</a>.
                         <h2 class="h3">Droits d'auteur</h2>
                         Toutes les images présentent sur ce site sont de ma propriété excepté celles provenant de :
@@ -29,7 +29,7 @@
                             <li><a href="https://pixabay.com" target="_blank">Pixabay</a></li>
                             <li><a href="https://www.flickr.com" target="_blank">Flickr</a></li>
                         </ul>
-                        Je tiens à remercier <a href="https://www.unitag.io" target="_blank">Unitag</a> pour le QR Code.
+                        Merci à <a href="https://www.unitag.io" target="_blank">Unitag</a> pour le QR Code.
                         <h2 class="h3">Problèmes d'affichage</h2>
                         Si vous rencontrez des problèmes d'affichage sur le site, essayez de mettre à jour votre navigateur.<br />
                         Par exemple, pour notre cher internet explorer le site ne s'affichera correctement qu'à partir de sa version 10.<br />
