--- a/accueil.html
+++ b/accueil.html
@@ -175,9 +175,9 @@
                                         <span class="bar-width"></span>
                                     </div>
                                 </div>
-                                <h2 class="h4">Cobol</h2>
+                                <h2 class="h4">AutoHotkey</h2>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" data-value="10">
+                                    <div class="progress-bar" role="progressbar" data-value="70">
                                         <span class="bar-width"></span>
                                     </div>
                                 </div>
