--- a/formation/application-pizzeria.html
+++ b/formation/application-pizzeria.html
@@ -46,6 +46,8 @@
                                         <li><div class="glyphicon glyphicon-calendar"></div><span data-article="04/05/2017"></span></li>
                                         <li>|</li>
                                         <li><div class="glyphicon glyphicon-globe"></div> <a href="http://www.dta-ingenierie.fr" target="_blank">http://www.dta-ingenierie.fr</a></li>
+										<li>|</li>
+										<li><a href="https://github.com/nicolas-amiot/pizzeria-app" target="_blank">Sources du projet</a></li>
                                     </ul>
                                 </div>
                             </div>
