--- a/formation/controle-acces.html
+++ b/formation/controle-acces.html
@@ -46,6 +46,8 @@
                                         <li><div class="glyphicon glyphicon-calendar"></div><span data-article="04/03/2016"></span></li>
                                         <li>|</li>
                                         <li><div class="glyphicon glyphicon-globe"></div> <a href="http://www.univ-fcomte.fr" target="_blank">http://www.univ-fcomte.fr</a></li>
+										<li>|</li>
+										<li><a href="https://github.com/nicolas-amiot/projet-licence-pro" target="_blank">Sources du projet</a></li>
                                     </ul>
                                 </div>
                             </div>
