--- a/formation/localisation-materiel.html
+++ b/formation/localisation-materiel.html
@@ -48,6 +48,8 @@
                                         <li><div class="glyphicon glyphicon-calendar"></div><span data-article="18/05/2015"></span></li>
                                         <li>|</li>
                                         <li><div class="glyphicon glyphicon-globe"></div> <a href="http://lycees.ac-rouen.fr/modeste-leroy/" target="_blank">http://lycees.ac-rouen.fr/modeste-leroy/</a></li>
+										<li>|</li>
+										<li><a href="https://github.com/nicolas-amiot/projet-bts-iris" target="_blank">Sources du projet</a></li>
                                     </ul>
                                 </div>
                             </div>
