--- a/cv.html
+++ b/cv.html
@@ -16,18 +16,13 @@
             <!-- Contenu -->
             <section>
                 <div class="cv">
-					<!--
-                    <div class="flottant">
-                        <a href="/files/Amiot-Nicolas-CV.pdf" target="_blank"><img src="/images/pdf.png" alt="PDF" /></a>
-                    </div>
-					-->
                     <div class="col-sm-3 bandeau">
                         <div class="photo">
                             <img src="/images/nicolas-amiot.jpg" alt="Nicolas Amiot" class="img-responsive img-circle" />
                         </div>
                         <div class="text-center">
                             <span class="cadre">À propos de moi</span>
-                            <p>Jeune développeur passionné par les langages du web et par le Java après 3 ans d'études dans ces domaines.</p>
+                            <p>Développeur Java EE depuis plus de 3 ans, je suis ouvert à différents langages et apprécie les projets innovants.</p>
                         </div>
                         <hr />
                         <div class="glyphicon glyphicon-home"></div><div class="content-glyphicon">Nantes</div>
@@ -39,6 +34,12 @@
                         <div class="glyphicon glyphicon-certificate"></div><div class="content-glyphicon rubrique-glyphicon">Certification</div>
                         Java SE 8 Programmer I
                         <hr />
+						<div class="glyphicon glyphicon-tree-deciduous"></div><div class="content-glyphicon rubrique-glyphicon">Centres d'intérêt</div>
+						<h4>Sports collectifs</h4>
+                        <em>Football et Handball en club pendant 4 ans.</em>
+                        <h4>Jeux vidéo</h4>
+                        <em>Passionné des RPG et jeux de réflexion, je développe de temps à autres des jeux et sites dédiés aux jeux.</em>
+						<hr />
                         <div class="glyphicon glyphicon-globe"></div><div class="content-glyphicon rubrique-glyphicon">Site web</div>
                         <div class="qrcode">
                             <img src="/images/qrcode.png" alt="QR Code" class="img-responsive" /><div class="text-center">https://nicolas-amiot.github.io</div>
@@ -46,75 +47,68 @@
                     </div>
                     <div class="col-sm-9">
                         <h1>Nicolas Amiot</h1>
-                        <h2>Développeur web et java</h2>
+                        <h2>Développeur</h2>
                         <div class="ruban">
                             <div class="rubrique">
                                 <span class="glyphicon glyphicon-education"></span><h3>Formations</h3>
                             </div>
                         </div>
                         <h4>Licence professionnelle systèmes informatiques et logiciels<span class="text-info"> | Juillet 2016</span></h4>
-                        <ul class="text-muted">
-                            <li>
-                                Conception et développement orientés objet d'applications multi-tiers.
-                            </li>
-                        </ul>
+                        <p class="text-muted">Conception et développement orientés objet d'applications multi-tiers.</p>
                         <h4>Brevet de technicien supérieur<span class="text-info"> | Juillet 2015</span></h4>
-                        <ul class="text-muted">
-                            <li>
-                                Informatique et réseau pour l’industrie et les services techniques.
-                            </li>
-                        </ul>
+						<p class="text-muted">Informatique et réseau pour l’industrie et les services techniques.<br />Participation au Rotary Club d'Évreux pour le prix de l'innovation.</p>
                         <h4>Baccalauréat scientifique<span class="text-info"> | Juillet 2013</span></h4>
-                        <ul class="text-muted">
-                            <li>
-                                Section sciences de la vie et de la terre spécialité mathématiques.
-                            </li>
-                        </ul>
+						<p class="text-muted">Section sciences de la vie et de la terre spécialité mathématiques.</p>
                         <div class="ruban">
                             <div class="rubrique">
                                 <span class="glyphicon glyphicon-briefcase"></span><h3 class="short-text">Expériences</h3><h3 class="long-text">Expériences professionnelles</h3>
                             </div>
                         </div>
-                        <h4>Ingénieur d'études et développement Java EE chez DTA Ingénierie<span class="text-info"> | 13 février 2017 - 4 mai 2017</span></h4>
+						<h4>Ingénieur en technologie de l'information à CGI<span class="text-info"> | 8 janvier 2018 - 7 mai 2021</span></h4>
+						<p class="text-muted">Projet PAYSAGE : Paye des fonctionnaires (3 ans)</p>
+						<ul class="text-muted">
+							<li>Référent technique sur les données et la partie web de l'application.</li>
+							<li>Conversion de l'application PAY en Cobol vers Java</li>
+							<li>Développement des nouvelles spécifications</li>
+							<li>Gestion des tickets d'amélioration ou bogues</li>
+						</ul>
+						<p class="text-muted">Projet HERMES : Vente aux enchères de l'État (2 mois)</p>
+						<ul class="text-muted">
+							<li>Développement Java sur la partie back-office de l'application pour la gestion des ventes et la génération des PDF</li>
+						</ul>
+						<p class="text-muted">Projet GESTPAS : Gestion du prélèvement à la source (1 mois)</p>
+						<ul class="text-muted">
+							<li>Correction des bogues avant la mise en production</li>
+						</ul>
+						<p class="text-muted">Projet ADELIE : Consultation des comptes fiscaux des professionnels (1 mois)</p>
+						<ul class="text-muted">
+							<li>En assistance technique à la DGFIP pour la prise en compte de nouveaux services web concernant l'adresse des entreprises</li>
+						</ul>
+                        <h4>Ingénieur d'études et développement Java EE à DTA Ingénierie<span class="text-info"> | 13 février 2017 - 4 mai 2017</span></h4>
                         <ul class="text-muted">
-                            <li>Formation Expert Java EE de 57 jours.</li>
-                            <li>Développement du système d'information d'une application de pizzeria en utilisant la méthodologie Scrum.</li>
+                            <li>Formation Expert Java EE de 57 jours</li>
+                            <li>Développement du système d'information d'une application de pizzeria en utilisant la méthodologie Scrum</li>
                         </ul>
                         <h4>Stage en tant que développeur au GCS Emosist<span class="text-info"> | 7 mars 2016 - 10 juin 2016</span></h4>
                         <ul class="text-muted">
-                            <li>Synchronisation bidirectionnelle de deux bases de données avec l'ETL Talend et Java.</li>
-                            <li>Conception de l'application avec une base de données PostgreSQL de 133 tables et une base MySQL de 349 tables.</li>
+                            <li>Synchronisation bidirectionnelle de deux bases de données de santé comportant au total près de 500 tables avec l'ETL Talend</li>
                         </ul>
-                        <h4>Stage en tant que développeur chez Hebus-ip<span class="text-info"> | 19 mai 2014 - 27 juin 2014</span></h4>
+                        <h4>Stage en tant que développeur à Hebus-ip<span class="text-info"> | 19 mai 2014 - 27 juin 2014</span></h4>
                         <ul class="text-muted">
-                            <li>Mise en œuvre d'un système de vidéo-surveillance à l'aide de Raspberry PI.</li>
-                            <li>Réalisation de scripts shell pour rendre le système entièrement autonome.</li>
-                            <li>Création d'un site web en PHP pour la lecture du flux actuel ou des vidéos enregistrées.</li>
+                            <li>Mise en œuvre d'un système de vidéo-surveillance à l'aide de Raspberry PI</li>
+                            <li>Réalisation de scripts shell pour rendre le système autonome et d'un site web en PHP pour la lecture du flux actuel ou des vidéos</li>
                         </ul>
                         <div class="ruban">
                             <div class="rubrique">
                                 <span class="glyphicon glyphicon-cog"></span><h3>Compétences</h3>
                             </div>
                         </div>
-                        <h4>Langues vivantes</h4>
-                        <p class="text-muted">Anglais (niveau B2), Espagnol (niveau B2).</p>
-                        <h4>Programmation</h4>
-                        <p class="text-muted">Ajax, Android, C, C++, C#, CSS, HTML, Java, Java EE, Javascript, PHP, Shell, SQL, VBA, XML.</p>
+                        <h4>Langages</h4>
+                        <p class="text-muted">Java, JavaScript, CSS, HTML, PHP, Shell, SQL, AutoHotkey, Cobol, UML.</p>
                         <h4>Framework / API</h4>
-                        <p class="text-muted">AngularJS, Bootstrap, Hibernate, jQuery, Spring, Struts.</p>
-                        <h4>Méthodes / Architectures</h4>
-                        <p class="text-muted">Architecture n-tiers, Méthodes agiles, Patron de conception MVC, UML.</p>
+                        <p class="text-muted">Bootstrap, Hibernate, jQuery, Spring.</p>
                         <h4>Outils / SGBDR</h4>
-                        <p class="text-muted">Git, Maven, MySQL, Oracle Database, PostgreSQL, Talend Open Studio.</p>
-                        <div class="ruban">
-                            <div class="rubrique">
-                                <span class="glyphicon glyphicon-tree-deciduous"></span><h3 class="short-text">Intérêts</h3><h3 class="long-text">Centres d'intérêt</h3>
-                            </div>
-                        </div>
-                        <h4>Sport</h4>
-                        <p class="text-muted">Football (en club pendant 2 ans), Handball (en club pendant 2 ans).</p>
-                        <h4>Concours</h4>
-                        <p class="text-muted">Prix de participation au Rotary Club d'Évreux pour le prix de l'innovation.</p>
+                        <p class="text-muted">Git, SVN, Docker, Maven, SonarQube, Jenkins, Phabricator, MySQL, PostgreSQL, Talend Open Studio.</p>
                     </div>
                 </div>
             </section>
