--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,10 @@
                         <h4>Licence professionnelle systèmes informatiques et logiciels<span class="text-info"> | Juillet 2016</span></h4>
                         <p class="text-muted">Conception et développement orientés objet d'applications multi-tiers.</p>
                         <h4>Brevet de technicien supérieur<span class="text-info"> | Juillet 2015</span></h4>
-						<p class="text-muted">Informatique et réseau pour l’industrie et les services techniques.<br />Participation au Rotary Club d'Évreux pour le prix de l'innovation.</p>
+						<p class="text-muted">Informatique et réseau pour l’industrie et les services techniques.
+						<ul class="text-muted">
+							<li>Participation au Rotary Club d'Évreux pour le prix de l'innovation</li>
+						</ul>
                         <h4>Baccalauréat scientifique<span class="text-info"> | Juillet 2013</span></h4>
 						<p class="text-muted">Section sciences de la vie et de la terre spécialité mathématiques.</p>
                         <div class="ruban">
