--- a/accueil.html
+++ b/accueil.html
@@ -280,7 +280,7 @@
                                 <article>
                                     <h2 class="h4">27 avril 2017</h2>
                                     <h2 class="h4">Obtiention de la certification Java 8</h2>
-                                    <p class="text-muted">J'ai passé ma certification Java SE 8 Programmer I en anglais et je l'ai eu avec 87% de bonnes réponses (65% requis pour l'obtention).</p>
+                                    <p class="text-muted">J'ai passé ma certification Java SE 8 Programmer I en anglais que j'ai eu avec 87% de bonnes réponses (65% requis pour l'obtention).</p>
                                 </article>
                             </li>
 							<li>
@@ -290,9 +290,9 @@
                                     </a>
                                 </aside>
                                 <article>
-                                    <h2 class="h4">Depuis le 8 janvier 2018</h2>
+                                    <h2 class="h4">Du 8 janvier 2018 au 7 mai 2021</h2>
                                     <h2 class="h4">Ingénieur en technologie de l'information à CGI</h2>
-                                    <p class="text-muted">Je travaille principalement en tant que développeur JAVA EE sur différents projets au sein de l'ESN CGI.</p>
+                                    <p class="text-muted">J'ai travaillé au sein de l'ESN CGI sur différents projets de la DGFIP en tant que développeur JAVA EE.</p>
                                 </article>
                             </li>
                         </ul>
