--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Bienvenue à tous! Je m'appelle Nicolas Amiot et je suis développeur. N'hésitez pas à faire un tour sur mon site." />
+	<meta name="google-site-verification" content="8Q9s2LMXco_P_C8bmZTiFCVZXHJsl8KLoOPogXbWJDE" />
         <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/main.css" />
         <link rel="stylesheet" href="/support/correctif.css" />
