--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="google-site-verification" content="8Q9s2LMXco_P_C8bmZTiFCVZXHJsl8KLoOPogXbWJDE" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="refresh" content="0; url=https://nicolas-amiot.github.io/accueil" />
         <title>Accueil</title>
